...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/username_label"
        android:layout_width="98dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Username:"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
...
        android:textSize="20sp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_label" />

    <EditText
        android:id="@+id/major_input"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
...
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seniority_level_label" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:ems="10"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/email_label"
        app:layout_constraintTop_toBottomOf="@+id/seniority_level_spinner" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="140dp"
        android:layout_marginEnd="124dp"
        android:background="@drawable/userlogin"
        android:onClick="onRegisterPress"
        android:text="REGISTER"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


...
