...
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:text="Definition:"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_def1"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/input_def1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Definition:"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_def2"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/input_def2"
        android:layout_width="wrap_content"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Definition:"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_def3"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/input_def3"
        android:layout_width="wrap_content"
...
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/def_title3"
        app:layout_constraintTop_toBottomOf="@+id/input_def2" />


    <Button
        android:id="@+id/next_button"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/register_button"
        android:onClick="onAddDefinitionSet"
        android:text="NEXT"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

...
